# curves3d

./: CMakeLists.txt  main.cpp  shapes.cpp  shapes.h
curves3d/: cmake_install.cmake
